--- a/quiet-twitter/quiet-twitter.css
+++ b/quiet-twitter/quiet-twitter.css
@@ -6,6 +6,7 @@
 .request-favorited-popup strong { display:none !important; }
 .rn-lrvibr span { display:none !important; }
 .MomentCapsuleLikesCount { display:none !important; }
+.MomentCapsuleLikesFacepile-countNum { display:none !important; }
 
 /* etc. */
 .wtf-module { display:none !important; }
