--- a/quiet-twitter/quiet-twitter.css
+++ b/quiet-twitter/quiet-twitter.css
@@ -1,3 +1,7 @@
+/*
+ * for previous UI
+ */
+
 /* number */
 .ProfileNav-value { display:none !important; }
 .ProfileCardStats-statValue { display:none !important; }
@@ -15,3 +19,15 @@
 .LiveVideoHomePageModuleContainer { display:none !important; }
 .RelatedUsers { display:none !important; }
 .js-translate-tweet { display:none !important; }
+
+/*
+ * for current UI (en)
+ */
+
+div.css-1dbjc4n.r-1u4rsef.r-9cbz99.r-t23y2h.r-1phboty.r-rs99b7.r-15d164r.r-1udh08x { display:none !important; }
+div.css-1dbjc4n.r-14lw9ot.r-1tlfku8.r-t23y2h.r-1phboty.r-rs99b7.r-15d164r.r-1udh08x { display:none !important; }
+
+a span.css-901oao.css-16my406.r-1qd0xha.r-vw2c0b.r-ad9z0x.r-bcqeeo.r-qvutc0 { display:none !important; }
+span.css-901oao.css-16my406.r-1qd0xha.r-ad9z0x.r-1n0xq6e.r-bcqeeo.r-d3hbe1.r-1wgg2b2.r-axxi2z.r-qvutc0 { display:none !important; }
+
+div.css-1dbjc4n.r-1ebgqk7.r-18u37iz.r-1t68eob.r-u8s1d.r-184en5c > div:nth-child(2) > div > div  { display:none !important; }
