--- a/quiet-twitter/quiet-twitter.css
+++ b/quiet-twitter/quiet-twitter.css
@@ -40,3 +40,11 @@ div.r-1p0dtai.r-1pi2tsx.r-1d2f490.r-u8s1d.r-ipm5af.r-13qz1uu > div > div > div >
 
 /* list header image */
 div.css-1dbjc4n.r-1jgb5lz.r-1ye8kvj.r-13qz1uu > div > section > div > div > div > div:nth-child(1) > div > div.css-1dbjc4n.r-1adg3ll.r-1udh08x { display:none !important; }
+
+/*
+ * for current UI (ja)
+ */
+
+/* following, followers, reply, retweet, like */
+a span.css-901oao.css-16my406.r-gwet1z.r-vw2c0b.r-ad9z0x.r-bcqeeo.r-qvutc0 { display:none !important; }
+span.css-901oao.css-16my406.r-gwet1z.r-ad9z0x.r-1n0xq6e.r-bcqeeo.r-d3hbe1.r-1wgg2b2.r-axxi2z.r-qvutc0 { display:none !important; }
