--- a/quiet-twitter/quiet-twitter.css
+++ b/quiet-twitter/quiet-twitter.css
@@ -25,6 +25,11 @@ aside[aria-label="Who to follow"] { display:none !important; }
 /* video view */
 [data-testid=previewInterstitial] > div:nth-child(2) > div:nth-child(2) { display:none !important; }
 [data-testid=viewCount] { display:none !important; }
+div.css-901oao.css-bfa6kz.r-jwli3a.r-1qd0xha.r-a023e6.r-16dba41.r-ad9z0x.r-5f2r5o.r-bcqeeo.r-qvutc0[dir=auto] { display:none !important; }
 
 /* Follows you */
-div.css-901oao.css-bfa6kz.r-e84r5y.r-1f0042m.r-1re7ezh.r-1q142lx.r-1qd0xha.r-n6v787.r-16dba41.r-1sf4r6n.r-1f6r7vd.r-bcqeeo.r-ou255f.r-qvutc0[dir=auto] { display:none !important; }
+div.css-901oao.css-bfa6kz.r-e84r5y.r-z2wwpe.r-1re7ezh.r-1q142lx.r-1qd0xha.r-n6v787.r-16dba41.r-1sf4r6n.r-1f6r7vd.r-bcqeeo.r-ou255f.r-qvutc0[dir=auto] { display:none !important; }
+
+/* Followed by */
+div.css-1dbjc4n.r-18u37iz.r-1q142lx { display:none !important; }
+div.css-901oao.r-1re7ezh.r-1wbh5a2.r-1qd0xha.r-n6v787.r-16dba41.r-1sf4r6n.r-1n0xq6e.r-bcqeeo.r-qvutc0[dir=auto] { display:none !important; }
