--- a/quiet-twitter/quiet-twitter.css
+++ b/quiet-twitter/quiet-twitter.css
@@ -1,17 +1,17 @@
-/* following, followers */
+/* Following, Followers */
 [href$="/following"] > span:first-child { display:none !important; }
 [href$="/followers"] > span:first-child { display:none !important; }
 [href$="/followers"][role="link"] { pointer-events: none; }
 
 /* analytics, reply, retweet, like */
-[href$="/analytics"]    > div:first-child > div:nth-child(2) { display:none !important; }
+/* [href$="/analytics"]    > div:first-child > div:nth-child(2) { display:none !important; } */
 [data-testid=reply]     > div:first-child > div:nth-child(2) { display:none !important; }
 [data-testid=retweet]   > div:first-child > div:nth-child(2) { display:none !important; }
 [data-testid=unretweet] > div:first-child > div:nth-child(2) { display:none !important; }
 [data-testid=like]      > div:first-child > div:nth-child(2) { display:none !important; }
 [data-testid=unlike]    > div:first-child > div:nth-child(2) { display:none !important; }
 
-/* Retweets, Likes */
+/* Views, Retweets, Quote Tweets, Likes */
 [href$="/analytics"]          > div:first-child { display:none !important; }
 [href$="/retweets"]           > div:first-child { display:none !important; }
 [href$="/with_comments"]      > div:first-child { display:none !important; }
