--- a/quiet-twitter/quiet-twitter.css
+++ b/quiet-twitter/quiet-twitter.css
@@ -12,7 +12,7 @@
 [data-testid=unlike]    > div:first-child > div:nth-child(2) { display:none !important; }
 
 /* Views */
-div:has(> a > time) > span:nth-child(3) > span > div { display:none !important; }
+div:has(> a > time) + div + div > span > div { display:none !important; }
 /* Retweets, Quote Tweets, Likes */
 [href$="/retweets"]           > div:first-child { display:none !important; }
 [href$="/with_comments"]      > div:first-child { display:none !important; }
