--- a/quiet-twitter/quiet-twitter.css
+++ b/quiet-twitter/quiet-twitter.css
@@ -13,10 +13,11 @@
 
 /* Views */
 div:has(> a > time) + div + div > span > div { display:none !important; }
-/* Retweets, Quote Tweets, Likes */
+/* Retweets, Quote Tweets, Likes, Bookmarks */
 [href$="/retweets"]           > div:first-child { display:none !important; }
 [href$="/with_comments"]      > div:first-child { display:none !important; }
 [href$="/likes"][role="link"] > div:first-child { display:none !important; }
+div:has([href$="/likes"][role="link"]) + div > div:first-child > div:first-child { display:none !important; }
 
 /* video view */
 [data-testid=previewInterstitial] > div:nth-child(2) > div:nth-child(2) { display:none !important; }
